<resources>

    <string name="app_name">AdriaReceipt</string>
    <string name="quantityInReceipt" translatable="false">%1$.2f %2$s</string>
    <string name="euroPerKg" translatable="false">%1$.2f €/%2$s</string>
    <string name="goodPrice" translatable="false">%1$.2f €</string>
    <string name="date_time_receipt">Дата/время: %1$s</string>
    <string name="total_receipt">Итого: %1$.2f €</string>
    <string name="rename_good_dialog_title">Новое название для: \"%1$s\"</string>
    <string name="costsPerDay7">Расход за 7 дней: %1$.2f € (%2$.2f €/день)</string>
    <string name="costsPerDay30">Расход за 30 дней: %1$.2f € (%2$.2f €/день)</string>
    <string name="costsPerDay">%1$.2f € (%2$.2f €/день)</string>
    <string name="quantity_per_day">%1$.2f %2$s/день</string>
    <string name="euro_per_day">%1$.2f €/день</string>
    <string name="group_name">Группа: %1$s</string>
    <string name="goods_name" translatable="false">%1$s</string>
    <string name="editGoodName_activity_title">Редактирование \"%1$s\"</string>
    <string name="add_receipt_start_btn">Сканировать чек</string>
    <string name="view_receipts_btn">Чеки</string>
    <string name="costs_start_btn">Расходы</string>
    <string name="goods_btn">Товары</string>
    <string name="need_camera_access_toast">Без доступа к камере сканирование возможно только в стороннем приложении</string>
    <string name="qr_invalid_title">QR-код неверный</string>
    <string name="field_absent_message">нет одного из полей: \"iic\", \"tin\", \"data\"</string>
    <string name="download_error_title">Ошибка загрузки</string>
    <string name="wrong_link_title">Неверная ссылка</string>
    <string name="wrong_link_description">Ссылка в QR-коде не ведёт на сайт \"mapr.tax.gov.me\"</string>
    <string name="cancel_dialog_btn">Отмена</string>
    <string name="no_internet_title">Интернет отсутствует!</string>
    <string name="no_internet_message">Интернет потребуется для загрузки чека. Всё равно сканировать?</string>
    <string name="scan_anyway_btn_dialog">Сканировать всё равно</string>
    <string name="add_goods_to_db_receipt_frag_label">Добавьте недостающие товары в базу:</string>
    <string name="rename_shop_btn">переименовать магазин</string>
    <string name="shop">магазин</string>
    <string name="spell_cash_description">за наличные</string>
    <string name="spell_card_description">картой</string>
    <string name="add_receipt_btn_default">для внесения чека укажите все данные</string>
    <string name="add_receipt_btn_ok_text">Добавить чек</string>
    <string name="change_name_exist_toast">Название уже используется</string>
    <string name="receipt_saved_toast">Чек сохранён!</string>
    <string name="wrong_date_title">Дата неверная</string>
    <string name="dates_overlap_message">даты пересекаются</string>
    <string name="days7_tab_name">За 7 дней</string>
    <string name="days30_tab_name">За 30 дней</string>
    <string name="by_period_tab_name">За период</string>
    <string name="choose_orig_name_label">К этому имени относится несколько ориг. названий, выберите нужное:</string>
    <string name="change_group_label">Изменить группу:</string>
    <string name="change_name_btn">Изменить название</string>
    <string name="create_new_group_btn">добавить новую группу</string>
    <string name="unit_label_radiogroup">Единица измерения:</string>
    <string name="kilogram_radiobtn">кг</string>
    <string name="litre_radiobtn">л</string>
    <string name="piece_radiobtn">шт.</string>
    <string name="change_btn">Изменить</string>
    <string name="good_changed_toast">Товар изменён!</string>
    <string name="new_name_dialog_title">Новое название</string>
    <string name="dialog_title_new_group">Новая группа</string>
    <string name="ok_dialog_btn">OK</string>
    <string name="empty_name_fail_toast">Название не должно быть пустым</string>
    <string name="list_orig_names_label">Список оригинальных названий:</string>
    <string name="create_new_group_hint">Создать новую группу</string>
    <string name="textedit_hint_new_name">новое название</string>
    <string name="edittext_hint_new_shop_name">новое название</string>
    <string name="good_name_row_label">Название</string>
    <string name="costs_title_fragment">Расход:</string>
    <string name="since_time_btn">С</string>
    <string name="pick_date_btn">выбрать</string>
    <string name="to_date_btn">по</string>
    <string name="shop_name_column">Название магазина:</string>
    <string name="date_column">Дата:</string>
    <string name="total_column">Итого:</string>
    <string name="good">Товар</string>
    <string name="default_name">Название</string>
    <string name="change_good_name_btn">Изм. имя</string>
    <string name="change_good_group_btn">Группа</string>
    <string name="change_good_unit_btn">Ед.изм.</string>
    <string name="loading_dialog_text">Загрузка чека в Черногории может занимать до 60 сек</string>
    <string name="kilograms_full_dialog">килограммы (кг)</string>
    <string name="litres_full_dialog">литры (л)</string>
    <string name="pieces_full_dialog">штуки (шт.)</string>
    <string name="new_shop_name_title">Новое название магазина:</string>
    <string name="rename_dialog_btn">Переименовать</string>
    <string name="exit_back_dialog_message">Вы действительно хотите выйти? Чек НЕ будет добавлен</string>
    <string name="exit_back_dialog_title">Закрыть окно?</string>
    <string name="exit_back_dialog_ok_btn">Выйти</string>
    <string name="receipt_already_scanned_error_message">Чек уже был отсканирован</string>
    <string name="receipt_scanned_title_error">Чек уже отсканирован</string>
    <string name="internet_lost_error_message">Интернет отсутствует!</string>
    <string name="wrong_json_error_message">Неверный ответ сервера (json)</string>
    <string name="timeout_error_message">Таймаут превышен, сервер не отвечает</string>
    <string name="edit_shop_button">Магазины/группы</string>
    <string name="rename_shop_dialog_title">Переименовать \"%1$s\":</string>
    <string name="shop_renamed_success_toast">Магазин переименован!</string>
    <string name="add_receipt_manual_btn">Добавить чек вручную</string>
    <string name="add_good_btn_descr">Добавить товар</string>
    <string name="add_receipt_button">Добавить чек</string>
    <string name="add_shop_name_btn">Магазин</string>
    <string name="add_date_btn">Дата</string>
    <string name="pay_by_cash">Оплата наличными</string>
    <string name="pay_by_card">Оплата картой</string>
    <string name="add_good_name_btn">Название</string>
    <string name="add_group_btn">Группа</string>
    <string name="add_price_btn">Цена</string>
    <string name="add_quantity_btn">Количество</string>
    <string name="shop_name_dialog_title">Название магазина</string>
    <string name="price_dialog_title">Цена \"%1$s\"</string>
    <string name="quantity_dialog_title">Количество \"%1$s\"</string>
    <string name="empty_price_toast_fail">Цена не должна быть пустой</string>
    <string name="quantity_empty_fail_toast">Количество не должно быть пустым</string>
    <string name="empty_unit_fail_toast">Нужно указать ед. изм.</string>
    <string name="diagram_view_group_cost" translatable="false">%1$s %2$.0f€ (%3$.0f%%)</string>
    <string name="diagram_view_no_buys">Не было покупок за период</string>
    <string name="settings_btn">Настройки</string>
    <string name="graphics_btn">Графики</string>
    <string name="group_renamed_toast">Группа переименована!</string>
    <string name="edit_shops_name_tab">Переименовать магазин</string>
    <string name="edit_groups_name_tab">Переименовать группу</string>
    <string name="cost_in_euro" translatable="false">€%1$.1f</string>
    <string name="diagramview_label_costs_by_7_days">Расходы за 7 дней:</string>
    <string name="diagramview_label_costs_by_30_days">Расходы за 30 дней:</string>
    <string name="diagramview_label_calc_by_period">Посчитать за период:</string>
    <string name="label_costs_grouped_by_days">Расход по дням:</string>
    <string name="label_costs_grouped_by_weeks">Расход по неделям:</string>
    <string name="label_costs_grouped_by_month">Расход по месяцам:</string>
    <string name="costs_by_groups_tab">Расходы по группам</string>
    <string name="costs_by_time_tab">Расходы по времени</string>
    <string name="good_price_hint">цена товара</string>
    <string name="about_toolbar_title">О приложении</string>
    <string name="empty_goods_list_label">Товары пока не добавлены</string>
    <string name="empty_list_label">Список пустой</string>
    <string name="no_receipts_label">Чеков ещё нет</string>
    <string name="no_cost_label">Расходов за период не было</string>
    <string name="scan_in_other_app_btn">Сканировать сторонним приложением</string>
    <string name="qr_scanner_label">Наведите на QR-код чека</string>
    <string name="scanner_not_installed_toast">Сканер не установлен!</string>

    <!-- Preferences -->
    <string name="setting_name_title">Названия из чека</string>
    <string name="setting_name_summary">Сразу заполнять название товара для быстрого добавления</string>
    <string name="setting_group_title">Группа по умолчанию</string>
    <string name="setting_group_summary">У новых товаров будет указана группа - Products</string>
    <string name="setting_unit_title">Ед.изм. по умолчанию</string>
    <string name="setting_unit_summary">У новых товаров будет указан \'кг\'</string>
    <string name="setting_category_title">Использовать значения по умолчанию</string>

    <!-- Export menu -->
    <string name="export_toolbar_title">Экспорт данных</string>
    <string name="rb_receipts_export">Экспорт таблицы с чеками (.csv)</string>
    <string name="rb_monthly_export">Экспорт таблицы с расходами по месяцам (.csv)</string>
    <string name="export_receipts_filename">Список чеков %1$s.csv</string>
    <string name="export_groups_by_month_filename">Расходы по месяцам %1$s.csv</string>
    <string name="export_successful_toast">Данные сохранены</string>

</resources>