<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/setting_category_title">

        <CheckBoxPreference
            android:layout_width="match_parent"
            android:icon="@drawable/receipt_icon"
            app:defaultValue="false"
            app:key="name_from_receipt"
            app:summary="@string/setting_name_summary"
            app:title="@string/setting_name_title" />

        <CheckBoxPreference
            android:layout_width="match_parent"
            android:icon="@drawable/receipt_icon"
            app:defaultValue="false"
            app:key="use_default_group"
            app:summary="@string/setting_group_summary"
            app:title="@string/setting_group_title" />

        <CheckBoxPreference
            android:layout_width="match_parent"
            android:icon="@drawable/receipt_icon"
            app:defaultValue="false"
            app:key="use_default_unit"
            app:summary="@string/setting_unit_summary"
            app:title="@string/setting_unit_title" />

    </PreferenceCategory>

</PreferenceScreen>