<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/name"
        android:textSize="17sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/default_name" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantityInReceipt"
        android:textSize="17sp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/price"
        android:textSize="17sp"
        android:layout_marginTop="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/euroPerKg"
        app:layout_constraintLeft_toRightOf="@+id/quantity"
        app:layout_constraintRight_toLeftOf="@+id/total"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/total"
        android:textSize="17sp"
        android:layout_marginStart="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/goodPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <Button
        android:id="@+id/nameBtn"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_good_name_btn"
        app:layout_constraintTop_toBottomOf="@+id/quantity"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/groupBtn"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_good_group_btn"
        app:layout_constraintTop_toBottomOf="@+id/quantity"
        app:layout_constraintStart_toEndOf="@+id/nameBtn"
        app:layout_constraintEnd_toStartOf="@+id/suffixBtn" />

    <Button
        android:id="@+id/suffixBtn"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_good_unit_btn"
        app:layout_constraintTop_toBottomOf="@+id/quantity"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>