<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/radioGroup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <RadioButton
        android:id="@+id/kg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kilograms_full_dialog" />

    <RadioButton
        android:id="@+id/L"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/litres_full_dialog" />

    <RadioButton
        android:id="@+id/piece"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pieces_full_dialog" />

</RadioGroup>