<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/newName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/good_name_row_label" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newName"
        android:text="@string/quantityInReceipt" />

    <TextView
        android:id="@+id/quantityPerDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintLeft_toRightOf="@+id/quantity"
        app:layout_constraintRight_toLeftOf="@id/costPerDay"
        app:layout_constraintTop_toBottomOf="@+id/newName"
        android:text="@string/quantity_per_day" />

    <TextView
        android:id="@+id/costPerDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintLeft_toRightOf="@+id/quantityPerDay"
        app:layout_constraintRight_toLeftOf="@id/total"
        app:layout_constraintTop_toBottomOf="@+id/newName"
        android:text="@string/euro_per_day" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintTop_toBottomOf="@+id/newName"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/goodPrice" />

</androidx.constraintlayout.widget.ConstraintLayout>