<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:titleTextColor="@color/white"
        app:title="@string/app_name" />

    <Button
        android:id="@+id/add_receipt_button"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="20dp"
        android:text="@string/add_receipt_start_btn"
        android:textSize="12sp"
        app:icon="@drawable/scan_icon"
        app:iconGravity="start"
        android:drawablePadding="50dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintEnd_toStartOf="@+id/add_manual_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/add_manual_btn"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="20dp"
        android:text="@string/add_receipt_manual_btn"
        android:textSize="12sp"
        app:icon="@drawable/manual_add_icon"
        app:iconGravity="start"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_receipt_button"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/view_costs_button"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="20dp"
        android:text="@string/costs_start_btn"
        android:textSize="12sp"
        app:icon="@drawable/spent_icon"
        app:iconGravity="start"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/goods_button"
        app:layout_constraintTop_toBottomOf="@+id/add_receipt_button" />

    <Button
        android:id="@+id/goods_button"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="20dp"
        android:text="@string/goods_btn"
        android:textSize="12sp"
        app:icon="@drawable/goods_icon"
        app:iconGravity="start"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_costs_button"
        app:layout_constraintTop_toBottomOf="@+id/add_manual_btn" />

    <Button
        android:id="@+id/edit_shop_button"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="20dp"
        android:text="@string/edit_shop_button"
        android:textSize="12sp"
        app:icon="@drawable/shop_icon"
        app:iconGravity="start"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/view_receipt_button"
        app:layout_constraintTop_toBottomOf="@+id/view_costs_button" />

    <Button
        android:id="@+id/view_receipt_button"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="20dp"
        android:text="@string/view_receipts_btn"
        android:textSize="12sp"
        app:icon="@drawable/receipt_icon"
        app:iconGravity="start"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/edit_shop_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goods_button" />

    <Button
        android:id="@+id/show_graphics_button"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="20dp"
        android:text="@string/graphics_btn"
        android:textSize="12sp"
        app:icon="@drawable/graphic_icon"
        app:iconGravity="start"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/settings"
        app:layout_constraintTop_toBottomOf="@+id/edit_shop_button" />

    <Button
        android:id="@+id/settings"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="20dp"
        android:text="@string/settings_btn"
        android:textSize="12sp"
        app:icon="@drawable/settings_icon"
        app:iconGravity="start"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/show_graphics_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_receipt_button" />


</androidx.constraintlayout.widget.ConstraintLayout>