<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.editGoodActivity.EditGoodActivity">

    <TextView
        android:id="@+id/editGoodNameLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="17sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text='@string/editGoodName_activity_title' />

    <TextView
        android:id="@+id/origNameLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@+id/editGoodNameLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/scrollOrigNames"
        app:layout_constraintBottom_toTopOf="@id/scrollOrigNames"
        android:text="@string/choose_orig_name_label" />

    <TextView
        android:id="@+id/changeGroupLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@+id/editGoodNameLabel"
        app:layout_constraintLeft_toLeftOf="@+id/scrollGroups"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/change_group_label" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="origNameLabel,changeGroupLabel" />

    <ScrollView
        android:id="@+id/scrollOrigNames"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/scrollGroups"
        app:layout_constraintTop_toBottomOf="@+id/barrier_top"
        app:layout_constraintBottom_toTopOf="@+id/barrier_bottom" >

        <RadioGroup
            android:id="@+id/origNamesRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </ScrollView>


    <ScrollView
        android:id="@+id/scrollGroups"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/barrier_top"
        app:layout_constraintLeft_toRightOf="@id/scrollOrigNames"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/barrier_bottom" >

        <RadioGroup
            android:id="@+id/groupsRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </ScrollView>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="changeNameBtn,addNewGroupBtn" />

    <Button
        android:id="@+id/changeNameBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="@id/barrier_bottom"
        app:layout_constraintBottom_toTopOf="@id/changeMeasureLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/scrollOrigNames"
        android:layout_margin="5dp"
        android:text="@string/change_name_btn" />

    <Button
        android:id="@+id/addNewGroupBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"

        app:layout_constraintLeft_toLeftOf="@+id/scrollGroups"
        app:layout_constraintBottom_toTopOf="@id/changeMeasureLabel"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/create_new_group_btn" />

    <TextView
        android:id="@+id/changeMeasureLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@id/unitRadioGroup"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/unit_label_radiogroup" />

    <RadioGroup
        android:id="@+id/unitRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btnChange"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/kg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kilogram_radiobtn"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/L"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/litre_radiobtn"
            android:layout_weight="1"/>

        <RadioButton
            android:id="@+id/pc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/piece_radiobtn"
            android:layout_weight="1"/>

    </RadioGroup>

    <Button
        android:id="@+id/btnChange"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/change_btn"
        android:enabled="false" />

</androidx.constraintlayout.widget.ConstraintLayout>